Ajustando servicios con callback

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
         Espero tener los mejores y grandiosos resultados
     </string>
 
+    <string name="API">https://api-dhr.herokuapp.com/</string>
+
 </resources>
