--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     </string>
 
     <string name="API">https://api-dhr.herokuapp.com/</string>
+    <string name="S3">https://s3.amazonaws.com/dhr-sanjose/</string>
 
 </resources>
