--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     </string>
 
     <string name="API">https://api-dhr.herokuapp.com/</string>
+    <string name="Desarrollo">http://localhost:3000/</string>
     <string name="S3">https://s3.amazonaws.com/dhr-sanjose/</string>
 
 </resources>
