--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     </string>
 
     <string name="parrafo5">
-        Durante cada cita el paciente debera llegar al consultorio acompañado siempre de su aparato Myobrace.
+        Durante cada cita el pacientes debera llegar al consultorio acompañado siempre de su aparato Myobrace.
     </string>
 
     <string name="parrafo6">
