Ficha - Historial de Fotos 7

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
 
     <string name="API">https://api-dhr.herokuapp.com/</string>
     <string name="Desarrollo">http://localhost:3000/</string>
-    <string name="S3">https://s3.amazonaws.com/dhr-sanjose/</string>
+    <string name="S3">https://dhr-app.s3.amazonaws.com/</string>
+<!--    <string name="S3">https://s3.amazonaws.com/dhr-sanjose/</string>-->
+<!--    https://dhr-app.s3.amazonaws.com/1/FN-11/HF-1.jpg-->
 
 </resources>
